# Multithreaded_and_distributed_programming

./: .gitignore
LR_1/: README.md  main.cpp
LR_2/: CMakeLists.txt  README.md
LR_2/include/: inverse_OpenMP.h  inverse_single.h  matrix_operation.h
LR_2/src/: inverse_OpenMP.cpp  inverse_single.cpp  matrix_operation.cpp  menu.cpp
LR_3/: CMakeLists.txt  README.md
LR_3/include/: inverse_MPI.h  inverse_single.h  matrix_operation.h
LR_3/src/: inverse_MPI.cpp  inverse_single.cpp  matrix_operation.cpp  menu.cpp
LR_4/: CMakeLists.txt  README.md
LR_4/include/: inverse_CUDA.cuh  inverse_single.h  matrix_operation.h
LR_4/src/: inverse_CUDA.cu  inverse_single.cpp  matrix_operation.cpp  menu.cpp
